--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@ button{cursor:pointer;font-weight:bold}
 table{width:100%;border-collapse:collapse}
 th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 .total{font-size:20px;color:#2ecc71}
+.neg{color:#e74c3c}
+.ok{color:#2ecc71}
+.warn{color:#f1c40f}
 canvas{background:#111;border-radius:8px;margin-top:10px}
+small{color:#ccc}
 </style>
 </head>
 
@@ -49,7 +53,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 
 <div class="content">
 
-<!-- PDV -->
+<!-- ================= PDV ================= -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -57,9 +61,11 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <input id="valorAbertura" type="number" placeholder="Valor de abertura">
   <button onclick="abrirCaixa()">Abrir Caixa</button>
 
-  <h4>Período</h4>
+  <h4>Período do Caixa</h4>
   <input type="date" id="periodoInicio">
   <input type="date" id="periodoFim">
+
+  <hr>
 
   <select id="cliente"></select>
   <select id="produto"></select>
@@ -76,14 +82,20 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 
   <button onclick="finalizarVenda()">Finalizar Venda</button>
   <button onclick="fecharCaixa()">Fechar Caixa</button>
+  <button onclick="pdfFechamento()">📄 PDF Fechamento</button>
 
   <div id="resumoCaixa"></div>
+
+  <h4>Conferência de Dinheiro</h4>
+  <input id="dinheiroContado" type="number" placeholder="Dinheiro contado">
+  <p id="resultadoConferencia"></p>
+
   <canvas id="graficoCaixa" width="380" height="200"></canvas>
 </div>
 
-<!-- AGENDA -->
+<!-- ================= AGENDA ================= -->
 <div id="agenda" class="section">
-  <h2>Agenda</h2>
+  <h2>Agenda (15 em 15)</h2>
   <input type="date" id="dataAgenda">
   <select id="horaAgenda"></select>
   <select id="clienteAgenda"></select>
@@ -92,7 +104,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaAgenda"></ul>
 </div>
 
-<!-- CLIENTES -->
+<!-- ================= CLIENTES ================= -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
   <input id="nomeCliente" placeholder="Nome">
@@ -101,7 +113,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaClientes"></ul>
 </div>
 
-<!-- PLANOS -->
+<!-- ================= PLANOS ================= -->
 <div id="planos" class="section">
   <h2>Planos</h2>
   <input id="nomePlano" placeholder="Nome">
@@ -112,7 +124,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaPlanos"></ul>
 </div>
 
-<!-- PRODUTOS -->
+<!-- ================= PRODUTOS ================= -->
 <div id="produtos" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
@@ -125,7 +137,7 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaProdutos"></ul>
 </div>
 
-<!-- DESPESAS -->
+<!-- ================= DESPESAS ================= -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
@@ -138,18 +150,19 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
   <ul id="listaDespesas"></ul>
 </div>
 
-<!-- RELATÓRIO MENSAL -->
+<!-- ================= RELATÓRIO MENSAL ================= -->
 <div id="mensal" class="section">
   <h2>Relatório Mensal</h2>
   <input type="month" id="mesRelatorio">
   <button onclick="gerarRelatorioMensal()">Gerar</button>
+  <button onclick="pdfRelatorioMensal()">📄 PDF Mensal</button>
   <div id="resumoMensal"></div>
   <canvas id="graficoMensal" width="380" height="200"></canvas>
 </div>
 
-<!-- HISTÓRICO -->
+<!-- ================= HISTÓRICO ================= -->
 <div id="historico" class="section">
-  <h2>Histórico de Caixas</h2>
+  <h2>Histórico de Fechamentos</h2>
   <ul id="listaHistorico"></ul>
 </div>
 
@@ -157,45 +170,320 @@ canvas{background:#111;border-radius:8px;margin-top:10px}
 </div>
 
 <script>
-/* ========= BASE ========= */
+/* =====================================================
+   BASE / DB
+===================================================== */
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
 
 const db = JSON.parse(localStorage.getItem("db")) || {
-  clientes:[], planos:[], produtos:[], vendas:[],
-  despesas:[], agenda:[], historico:[],
+  clientes:[], planos:[], produtos:[],
+  vendas:[], despesas:[], agenda:[],
+  historico:[],
   caixa:{aberto:false,abertura:0}
 };
 
 let carrinho=[];
 function save(){localStorage.setItem("db",JSON.stringify(db))}
 
-/* ========= FUNÇÕES OBRIGATÓRIAS ========= */
-function salvarAgendamento(){ alert("Agendamento salvo (base pronta)"); }
-function salvarCliente(){ db.clientes.push({nome:nomeCliente.value}); save(); render(); }
-function salvarPlano(){ db.planos.push({nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value}); save(); render(); }
-function salvarProduto(){ db.produtos.push({nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value}); save(); render(); }
-function salvarDespesa(){ db.despesas.push({desc:descDespesa.value,valor:+valorDespesa.value,tipo:tipoDespesa.value,data:new Date()}); save(); render(); }
+/* =====================================================
+   AGENDA
+===================================================== */
+function gerarHorarios15(){
+  let h=[];
+  for(let i=8;i<=20;i++){
+    ["00","15","30","45"].forEach(m=>h.push(`${String(i).padStart(2,"0")}:${m}`));
+  }
+  return h;
+}
 
-function abrirCaixa(){ db.caixa.aberto=true; db.caixa.abertura=+valorAbertura.value||0; save(); render(); }
-function addItem(){ const [n,v]=produto.value.split("|"); carrinho.push({n,v:+v}); renderCarrinho(); }
-function finalizarVenda(){ db.vendas.push({total:carrinho.reduce((s,i)=>s+i.v,0),pagamento:pagamento.value,data:new Date()}); carrinho=[]; save(); render(); }
-function fecharCaixa(){ alert("Caixa fechado (base correta)"); }
+function salvarAgendamento(){
+  if(db.agenda.find(a=>a.data===dataAgenda.value && a.hora===horaAgenda.value))
+    return alert("Horário ocupado");
+  db.agenda.push({
+    data:dataAgenda.value,
+    hora:horaAgenda.value,
+    cliente:clienteAgenda.value,
+    servico:servicoAgenda.value
+  });
+  save(); render();
+}
 
-function gerarRelatorioMensal(){ resumoMensal.innerHTML="Relatório mensal OK"; }
+/* =====================================================
+   PDV / CAIXA
+===================================================== */
+function abrirCaixa(){
+  db.caixa.aberto=true;
+  db.caixa.abertura=+valorAbertura.value||0;
+  carrinho=[];
+  save(); render();
+}
+
+function addItem(){
+  const [nome,valor,tipo]=produto.value.split("|");
+  carrinho.push({nome,valor:+valor});
+  renderCarrinho();
+}
+
+function finalizarVenda(){
+  if(!carrinho.length) return;
+  const total=carrinho.reduce((s,i)=>s+i.valor,0);
+  db.vendas.push({
+    data:new Date().toLocaleString(),
+    cliente:cliente.value,
+    pagamento:pagamento.value,
+    total
+  });
+  carrinho=[];
+  save(); render();
+}
+
+function fecharCaixa(){
+  const ini=periodoInicio.value?new Date(periodoInicio.value):null;
+  const fim=periodoFim.value?new Date(periodoFim.value+" 23:59:59"):null;
+
+  let pix=0,cartao=0,dinheiro=0,planos=0;
+  let qtdVendas=0,qtdPlanos=0;
+
+  const vendasPeriodo=db.vendas.filter(v=>{
+    const dt=new Date(v.data);
+    if(ini&&dt<ini)return false;
+    if(fim&&dt>fim)return false;
+    return true;
+  });
+
+  vendasPeriodo.forEach(v=>{
+    if(v.pagamento==="plano"){
+      planos+=v.total; qtdPlanos++;
+    }else{
+      qtdVendas++;
+      if(v.pagamento==="pix")pix+=v.total;
+      if(v.pagamento==="cartao")cartao+=v.total;
+      if(v.pagamento==="dinheiro")dinheiro+=v.total;
+    }
+  });
+
+  const despesasPeriodo=db.despesas.filter(d=>{
+    if(d.tipo==="fixa")return false;
+    const dt=new Date(d.data);
+    if(ini&&dt<ini)return false;
+    if(fim&&dt>fim)return false;
+    return true;
+  });
+
+  const despesas=despesasPeriodo.reduce((s,d)=>s+d.valor,0);
+  const faturamento=pix+cartao+dinheiro+planos;
+  const saldoEsperado=db.caixa.abertura+faturamento-despesas;
+
+  const contado=+dinheiroContado.value||0;
+  const diff=contado-dinheiro;
+
+  resumoCaixa.innerHTML=`
+    <h3>Fechamento do Caixa</h3>
+    <p>Abertura: R$ ${db.caixa.abertura.toFixed(2)}</p>
+    <p>Faturamento: R$ ${faturamento.toFixed(2)}</p>
+    <p>Pix: R$ ${pix.toFixed(2)}</p>
+    <p>Cartão: R$ ${cartao.toFixed(2)}</p>
+    <p>Dinheiro: R$ ${dinheiro.toFixed(2)}</p>
+    <p>Despesas: R$ ${despesas.toFixed(2)}</p>
+    <p>Qtd vendas: ${qtdVendas}</p>
+    <p>Qtd planos: ${qtdPlanos}</p>
+    <p class="total">Saldo esperado: R$ ${saldoEsperado.toFixed(2)}</p>
+  `;
+
+  if(contado===0){
+    resultadoConferencia.innerText="Informe o dinheiro contado";
+    resultadoConferencia.className="warn";
+  }else if(diff===0){
+    resultadoConferencia.innerText="✔ Caixa conferido";
+    resultadoConferencia.className="ok";
+  }else if(diff<0){
+    resultadoConferencia.innerText=`❌ Falta R$ ${Math.abs(diff).toFixed(2)}`;
+    resultadoConferencia.className="neg";
+  }else{
+    resultadoConferencia.innerText=`⚠️ Sobra R$ ${diff.toFixed(2)}`;
+    resultadoConferencia.className="warn";
+  }
+
+  desenharGraficoCaixa(pix,cartao,dinheiro,despesas,saldoEsperado);
+
+  db.historico.push({
+    periodo:`${periodoInicio.value} até ${periodoFim.value}`,
+    faturamento,despesas,saldoEsperado,
+    pix,cartao,dinheiro,planos,
+    contado,diff,
+    data:new Date().toLocaleString()
+  });
+
+  db.caixa.aberto=false;
+  save(); render();
+}
+
+/* =====================================================
+   CADASTROS
+===================================================== */
+function salvarCliente(){
+  const obj={nome:nomeCliente.value};
+  db.clientes.push(obj);
+  save(); render();
+}
+
+function salvarPlano(){
+  const obj={nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value};
+  db.planos.push(obj);
+  save(); render();
+}
+
+function salvarProduto(){
+  const obj={nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value};
+  db.produtos.push(obj);
+  save(); render();
+}
+
+function salvarDespesa(){
+  const obj={
+    desc:descDespesa.value,
+    valor:+valorDespesa.value,
+    tipo:tipoDespesa.value,
+    data:new Date().toLocaleString()
+  };
+  db.despesas.push(obj);
+  save(); render();
+}
+
+/* =====================================================
+   RELATÓRIO MENSAL
+===================================================== */
+function gerarRelatorioMensal(){
+  const [ano,m]=mesRelatorio.value.split("-");
+  const vendas=db.vendas.filter(v=>{
+    const d=new Date(v.data);
+    return d.getFullYear()==ano&&(d.getMonth()+1)==m;
+  });
+
+  const despesas=db.despesas.filter(d=>{
+    if(d.tipo==="fixa")return true;
+    const dt=new Date(d.data);
+    return dt.getFullYear()==ano&&(dt.getMonth()+1)==m;
+  });
+
+  const fat=vendas.reduce((s,v)=>s+v.total,0);
+  const desp=despesas.reduce((s,d)=>s+d.valor,0);
+  const lucro=fat-desp;
+
+  resumoMensal.innerHTML=`
+    <p>Faturamento: R$ ${fat.toFixed(2)}</p>
+    <p>Despesas: R$ ${desp.toFixed(2)}</p>
+    <p class="total">Lucro: R$ ${lucro.toFixed(2)}</p>
+  `;
+
+  desenharGraficoMensal(fat,desp,lucro);
+}
+
+/* =====================================================
+   GRÁFICOS
+===================================================== */
+function desenharGraficoCaixa(pix,cartao,dinheiro,desp,saldo){
+  const g=graficoCaixa.getContext("2d");
+  g.clearRect(0,0,380,200);
+  const vals=[pix,cartao,dinheiro,desp,saldo];
+  const labels=["Pix","Cartão","Dinheiro","Despesas","Saldo"];
+  const cores=["#2ecc71","#3498db","#f1c40f","#e74c3c","#9b59b6"];
+  const max=Math.max(...vals,1);
+  vals.forEach((v,i)=>{
+    const h=(v/max)*120;
+    g.fillStyle=cores[i];
+    g.fillRect(30+i*65,160-h,40,h);
+    g.fillText(labels[i],30+i*65,180);
+  });
+}
+
+function desenharGraficoMensal(fat,desp,luc){
+  const g=graficoMensal.getContext("2d");
+  g.clearRect(0,0,380,200);
+  const vals=[fat,desp,luc];
+  const labels=["Faturamento","Despesas","Lucro"];
+  const cores=["#2ecc71","#e74c3c","#3498db"];
+  const max=Math.max(...vals,1);
+  vals.forEach((v,i)=>{
+    const h=(v/max)*120;
+    g.fillStyle=cores[i];
+    g.fillRect(60+i*100,160-h,50,h);
+    g.fillText(labels[i],60+i*100,180);
+  });
+}
+
+/* =====================================================
+   PDF
+===================================================== */
+function pdfFechamento(){
+  const {jsPDF}=window.jspdf;
+  const pdf=new jsPDF();
+  let y=10;
+  pdf.text("FECHAMENTO DE CAIXA",10,y);y+=10;
+  db.historico.slice(-1).forEach(h=>{
+    pdf.text(`Período: ${h.periodo}`,10,y);y+=10;
+    pdf.text(`Faturamento: R$ ${h.faturamento.toFixed(2)}`,10,y);y+=10;
+    pdf.text(`Despesas: R$ ${h.despesas.toFixed(2)}`,10,y);y+=10;
+    pdf.text(`Saldo: R$ ${h.saldoEsperado.toFixed(2)}`,10,y);
+  });
+  pdf.save("fechamento-caixa.pdf");
+}
+
+function pdfRelatorioMensal(){
+  const {jsPDF}=window.jspdf;
+  const pdf=new jsPDF();
+  pdf.text("RELATÓRIO MENSAL",10,10);
+  pdf.text(resumoMensal.innerText,10,20);
+  pdf.save("relatorio-mensal.pdf");
+}
+
+/* =====================================================
+   RENDER
+===================================================== */
+function render(){
+  statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
+
+  cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
+  clienteAgenda.innerHTML=cliente.innerHTML;
+
+  produto.innerHTML=db.produtos.map(p=>`<option value="${p.nome}|${p.valor}|${p.tipo}">${p.nome}</option>`).join("");
+  servicoAgenda.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
+
+  planoCliente.innerHTML=db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+  tipoPlano.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
+
+  horaAgenda.innerHTML=gerarHorarios15().map(h=>`<option>${h}</option>`).join("");
+
+  listaClientes.innerHTML=db.clientes.map(c=>`<li>${c.nome}</li>`).join("");
+  listaPlanos.innerHTML=db.planos.map(p=>`<li>${p.nome} - R$ ${p.valor}</li>`).join("");
+  listaProdutos.innerHTML=db.produtos.map(p=>`<li>${p.nome} (${p.tipo})</li>`).join("");
+  listaDespesas.innerHTML=db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor} (${d.tipo})</li>`).join("");
+  listaAgenda.innerHTML=db.agenda.map(a=>`<li>${a.data} ${a.hora} - ${a.cliente}</li>`).join("");
+  listaHistorico.innerHTML=db.historico.map(h=>`
+    <li>
+      <b>${h.periodo}</b><br>
+      Faturamento: R$ ${h.faturamento.toFixed(2)}<br>
+      Despesas: R$ ${h.despesas.toFixed(2)}<br>
+      Saldo: R$ ${h.saldoEsperado.toFixed(2)}
+    </li>
+  `).join("");
+
+  renderCarrinho();
+}
 
 function renderCarrinho(){
   let h="<tr><th>Item</th><th>Valor</th></tr>",s=0;
-  carrinho.forEach(i=>{h+=`<tr><td>${i.n}</td><td>R$ ${i.v.toFixed(2)}</td></tr>`;s+=i.v});
-  carrinho.innerHTML=h; total.innerText=s.toFixed(2);
+  carrinho.forEach(i=>{
+    h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
+    s+=i.valor;
+  });
+  carrinho.innerHTML=h;
+  total.innerText=s.toFixed(2);
 }
 
-function render(){
-  cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
-  produto.innerHTML=db.produtos.map(p=>`<option value="${p.nome}|${p.valor}">${p.nome}</option>`).join("");
-}
 render();
 </script>
 
